# lab

./: object_repository.go
cpp/cpp_the_programming_language_book/: 2_calculator.cpp  3_variable_types.cpp
ga-example/: Dockerfile  README.md  ga.py
go/: encode_json_object.go  goroutines.go
go-test/: fib_test.go
go/c_integration/: Dockerfile  main.go
go/scylladb/: LICENSE.md  README.md  docker-compose.yml  dump.sql  index.html  main.go  run.sh
go/test/: README.md  fib.go
gocqlx-scylladb-crud/: docker-compose.yml  main.go
golang-docker-api-example/: README.md  main.go
golang-examples/: app.js  index.html  main.go  main.js  page1.html  page2.html
gst-rs/: README.md  record.sh  stream.sh
gst-streaming/: 2-camera-local.sh  4-camera-all-remote.sh  4-camera-local.sh  4-camera-remote.sh  README.md  debug-client.sh  record-client.sh
karma-mocha/: .travis.yml  README.md  bower.json  index.html  karma.conf.js  package.json
ml-digit-recognize/: docker-compose.yml
openai-gym-examples/: README.md
opencv-ffmpeg/: CMakeLists.txt  Dockerfile  README.md  video-recorder.cpp
opencv-workshop/: .gitignore  Dockerfile
opencv-workshop/facerecognize/: CMakeLists.txt  facedata.cpp  facerecognize.cpp  images.csv
opencv-workshop/facerecognize/demos/: facerecognize_eigenface.cpp
ping.js/: README.md  ping.js
protractor-docker/: Dockerfile  README.md  docker-compose.yml
python-opencv-facedetection/: README.md  facedetect.py
swig-golang/: .gitignore  Dockerfile  Makefile  README.md  main.go
webcam-phpjs/: README.md  index.html  uploader.php
(+10 files in other folders)
